Se ajustaron los nombres de los contenedores

--- a/styles.scss
+++ b/styles.scss
@@ -4,7 +4,7 @@
     
 }
 
-.side-menu__container {
+.aside-menu__container {
    
 }
 
@@ -12,11 +12,11 @@
    
 } 
 
-.side-left-principal__container {
+.aside-right-principal__container {
 
 }
 
-.side-left__container {
+.aside-left-post__container {
 
 }
 
@@ -26,4 +26,8 @@
 
 .side-right-post__container {
     
+}
+
+.footer__container {
+
 }
