--- a/vars.scss
+++ b/vars.scss
@@ -2,3 +2,4 @@ $fonts-principal: 'Segoe UI', 'Roboto',
 Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
 'Segoe UI Symbol';
 
+$background-principal: color rgb(190, 190, 190);
