se creo el header

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=styles.css.map */
+.header__container .button__create {
+  background-color: rgb(212, 229, 255);
+  color: rgb(23, 23, 204);
+  text-decoration: underline;
+  text-decoration-color: rgb(0, 0, 94);
+  cursor: pointer;
+}/*# sourceMappingURL=styles.css.map */
