--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,98 @@
-/*# sourceMappingURL=styles.css.map */
+.aside-menu__container .first-icons__container, .aside-menu__container .second-icons__container, .aside-menu__container .third-icons__container, .aside-menu__container .fourth-icons__container {
+  border: none;
+}
+.aside-menu__container .btn-first__button {
+  color: blue;
+  margin-bottom: 5px;
+}
+.aside-menu__container .btn-first__button:hover {
+  background-color: blue;
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: white;
+}
+.aside-menu__container .btn-second__button:hover {
+  background-color: rgb(212, 229, 255);
+  color: rgb(23, 23, 204);
+  text-decoration: underline;
+  text-decoration-color: rgb(0, 0, 94);
+}
+.aside-menu__container .card {
+  margin-bottom: 25px;
+}
+.aside-menu__container .list-group-item, .aside-menu__container .tags__item {
+  border: none;
+  background-color: rgb(245, 245, 245);
+}
+.aside-menu__container .list-group-item:hover {
+  background-color: rgb(212, 229, 255);
+  color: rgb(23, 23, 204);
+  text-decoration: underline;
+  text-decoration-color: rgb(0, 0, 94);
+  cursor: pointer;
+}
+.aside-menu__container .titles__items:hover {
+  background-color: rgb(245, 245, 245);
+  color: black;
+  text-decoration: none;
+  cursor: default;
+}
+.aside-menu__container .underline__text .card-title {
+  font-size: 23px;
+  font-weight: bold;
+}
+.aside-menu__container .underline__text .card-title span {
+  font-size: 23px;
+  font-weight: bold;
+  color: blue;
+  text-decoration: underline;
+  text-decoration-color: blue;
+}
+.aside-menu__container .underline__text .card-title :hover {
+  cursor: pointer;
+}
+.aside-menu__container .underline__text .card__text {
+  font-size: 16px;
+}
+.aside-menu__container .underline__text .card__text span {
+  font-size: 16px;
+  color: blue;
+  text-decoration: underline;
+  text-decoration-color: blue;
+}
+.aside-menu__container .underline__text .card__text :hover {
+  cursor: pointer;
+}
+.aside-menu__container .underline__text .koala__container:hover {
+  cursor: pointer;
+}
+.aside-menu__container .underline__text img {
+  margin-bottom: 20px;
+}
+.aside-menu__container .background__item {
+  background-color: rgb(245, 245, 245);
+  border: none;
+}
+.aside-menu__container .footer__text .card-footer__text {
+  font-size: 13px;
+  font-weight: lighter;
+}
+.aside-menu__container .footer__text .card-footer__text span {
+  font-size: 12.5px;
+  font-weight: bold;
+  color: blue;
+}
+.aside-menu__container .footer__text .card-footer__text span:hover {
+  cursor: pointer;
+}
+.aside-menu__container .icons__container {
+  margin-bottom: 25px;
+  background-color: rgb(245, 245, 245);
+}
+.aside-menu__container .icons__container img:hover {
+  background-color: rgb(212, 229, 255);
+  color: rgb(23, 23, 204);
+  text-decoration: underline;
+  text-decoration-color: rgb(0, 0, 94);
+  cursor: pointer;
+}/*# sourceMappingURL=styles.css.map */
