--- a/styles.scss
+++ b/styles.scss
@@ -1,16 +1,8 @@
-@import "vars";
-
-.header__container {    
-    .button__create {
-     background-color: rgb(212, 229, 255);
-     color: rgb(23, 23, 204);
-     text-decoration: underline;
-     text-decoration-color: rgb(0, 0, 94);
-     cursor: pointer;
-     
-    }
+@import "vars"; {
 
 }
+
+
 
 .aside-menu__container {
    
